Fixed `overflow`.

--- a/src/app/components/Modal/style.css
+++ b/src/app/components/Modal/style.css
@@ -9,6 +9,7 @@
   border: none;
   border-radius: 0.5em;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  overflow: hidden;
 
   .modal-close-btn-wrapper {
     & button {
@@ -27,7 +28,7 @@
       }
 
       &:hover {
-        background-color: hsla(0, 0%, 0%, 0.1);
+        background-color: var(--bg-light);
       }
     }
   }
